Fix scroll behavior of box list to hide scrollbar when not needed

--- a/app/app.css
+++ b/app/app.css
@@ -63,7 +63,7 @@ body {
 }
 
 .box-list {
-  @apply border-t border-b border-dodger-blue-150 divide-y max-h-[250px] overflow-y-scroll;
+  @apply border-t border-b border-dodger-blue-150 divide-y max-h-[250px] overflow-y-auto;
 }
 
 .box-list-item {
